# eigen-cddlib

./: .gitignore  CMakeLists.txt  package.xml
cmake/: FindCDD.cmake  eigen-cdd-config.cmake.in  eigen-cddlib-config.cmake.in
include/eigen-cdd/: Polyhedron.h
include/eigen-cddlib/: Polyhedron.h
src/: Polyhedron.cpp
tests/: TestPolyhedron.cpp
